headers/sqlucode.h

#define SQLColAttribute        SQLColAttributeW
#define SQLConnect        SQLConnectW
#define SQLDescribeCol        SQLDescribeColW
#define SQLError        SQLErrorW
#define SQLExecDirect        SQLExecDirectW
#define SQLGetStmtAttr        SQLGetStmtAttrW
#define SQLColumns        SQLColumnsW
#define SQLGetTypeInfo        SQLGetTypeInfoW
#define SQLSpecialColumns    SQLSpecialColumnsW
#define SQLStatistics        SQLStatisticsW
#define SQLDataSources        SQLDataSourcesW