headers/sql.h

#define SQL_ATTR_CURSOR_SENSITIVITY        (-2)
#define SQL_UNSPECIFIED                0
#define SQL_INSENSITIVE                1
#define SQL_SENSITIVE                2
#define SQL_PRED_NONE                0
#define SQL_PRED_CHAR                1
#define SQL_PRED_BASIC                2
/*
 *  SQLSpecialColumns - Column scopes
 */
#define SQL_SCOPE_CURROW            0
#define SQL_SCOPE_TRANSACTION            1
#define SQL_SCOPE_SESSION            2
/*
 *  SQLSpecialColumns - PSEUDO_COLUMN
 */
#define SQL_PC_UNKNOWN                0
#define SQL_PC_NON_PSEUDO            1
#define SQL_PC_PSEUDO                2
#define SQL_ROW_IDENTIFIER            1
/*
 *  SQLStatistics - fUnique
 */
#define SQL_INDEX_UNIQUE            0
#define SQL_INDEX_ALL                1
/*
 *  SQLStatistics - TYPE
 */
#define SQL_INDEX_CLUSTERED            1
#define SQL_INDEX_HASHED            2
#define SQL_INDEX_OTHER                3
/*
 *  SQLTransact/SQLEndTran
 */
#define SQL_COMMIT                0
#define SQL_ROLLBACK                1
/*
 *  Function Prototypes
 */
SQLRETURN SQL_API SQLAllocConnect (
    SQLHENV          EnvironmentHandle,
    SQLHDBC        * ConnectionHandle);
SQLRETURN SQL_API SQLAllocEnv (
    SQLHENV        * EnvironmentHandle);
SQLRETURN SQL_API SQLAllocHandle (
    SQLSMALLINT          HandleType,
    SQLHANDLE          InputHandle,
    SQLHANDLE        * OutputHandle);
SQLRETURN SQL_API SQLAllocStmt (
    SQLHDBC          ConnectionHandle,
    SQLHSTMT        * StatementHandle);
SQLRETURN SQL_API SQLBindCol (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      ColumnNumber,
    SQLSMALLINT          TargetType,
    SQLPOINTER          TargetValue,
    SQLLEN          BufferLength,
    SQLLEN        * StrLen_or_Ind);
SQLRETURN SQL_API SQLBindParam (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      ParameterNumber,
    SQLSMALLINT          ValueType,
    SQLSMALLINT          ParameterType,
    SQLULEN          LengthPrecision,
    SQLSMALLINT          ParameterScale,
    SQLPOINTER          ParameterValue,
    SQLLEN        * StrLen_or_Ind);
SQLRETURN SQL_API SQLCancel (
    SQLHSTMT          StatementHandle);
SQLRETURN SQL_API SQLCloseCursor (
    SQLHSTMT          StatementHandle);
SQLRETURN SQL_API SQLCopyDesc (
    SQLHDESC          SourceDescHandle,
    SQLHDESC          TargetDescHandle);
SQLRETURN SQL_API SQLDisconnect (
    SQLHDBC          ConnectionHandle);
SQLRETURN SQL_API SQLEndTran (
    SQLSMALLINT          HandleType,
    SQLHANDLE          Handle,
    SQLSMALLINT          CompletionType);
SQLRETURN SQL_API SQLExecute (
    SQLHSTMT          StatementHandle);
SQLRETURN SQL_API SQLFetch (
    SQLHSTMT          StatementHandle);
SQLRETURN SQL_API SQLFetchScroll (
    SQLHSTMT          StatementHandle,
    SQLSMALLINT          FetchOrientation,
    SQLLEN          FetchOffset);
SQLRETURN SQL_API SQLFreeConnect (
    SQLHDBC          ConnectionHandle);
SQLRETURN SQL_API SQLTransact (
    SQLHENV          EnvironmentHandle,
    SQLHDBC          ConnectionHandle,
    SQLUSMALLINT      CompletionType);