sql.py


        ################################################################################
        ####SQLGetStmtAttr - SQL_ATTR_CURSOR_SENSITIVITY################################
        ################################################################################
        self.SQL_UNSPECIFIED = 0
        self.SQL_INSENSITIVE = 1
        self.SQL_SENSITIVE = 2

        ################################################################################
        ####SQLGetTypeInfo - SEARCHABLE#################################################
        ################################################################################
        self.SQL_PRED_NONE = 0
        self.SQL_PRED_CHAR = 1
        self.SQL_PRED_BASIC = 2

        ################################################################################
        ####SQLSpecialColumns - Column scopes###########################################
        ################################################################################
        self.SQL_SCOPE_CURROW = 0
        self.SQL_SCOPE_TRANSACTION = 1
        self.SQL_SCOPE_SESSION = 2

        ################################################################################
        ####SQLSpecialColumns - PSEUDO_COLUMN###########################################
        ################################################################################
        self.SQL_PC_UNKNOWN = 0
        self.SQL_PC_NON_PSEUDO = 1
        self.SQL_PC_PSEUDO = 2

        ################################################################################
        ####SQLSpecialColumns - IdentifierType##########################################
        ################################################################################
        self.SQL_ROW_IDENTIFIER = 1

        ################################################################################
        ####SQLStatistics - fUnique#####################################################
        ################################################################################
        self.SQL_INDEX_UNIQUE = 0
        self.SQL_INDEX_ALL = 1

        ################################################################################
        ####SQLStatistics - TYPE########################################################
        ################################################################################
        self.SQL_INDEX_CLUSTERED = 1
        self.SQL_INDEX_HASHED = 2
        self.SQL_INDEX_OTHER = 3

        ################################################################################
        ####SQLTransact/SQLEndTran######################################################
        ################################################################################
        self.SQL_COMMIT = 0
        self.SQL_ROLLBACK = 1

        ################################################################################
        ####Function Prototypes#########################################################
        ################################################################################
        if hasattr(self.ODBC_DRIVER, "SQLAllocConnect"):
            self.ODBC_DRIVER.SQLAllocConnect.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLAllocConnect.argtypes = (self.SQLHENV, ctypes.POINTER(self.SQLHDBC),)
            self.SQLAllocConnect = self.ODBC_DRIVER.SQLAllocConnect
        else:
            self.SQLAllocConnect = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLAllocEnv"):
            self.ODBC_DRIVER.SQLAllocEnv.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLAllocEnv.argtypes = (ctypes.POINTER(self.SQLHENV),)
            self.SQLAllocEnv = self.ODBC_DRIVER.SQLAllocEnv
        else:
            self.SQLAllocEnv = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLAllocHandle"):
            self.ODBC_DRIVER.SQLAllocHandle.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLAllocHandle.argtypes = (self.SQLSMALLINT, self.SQLHANDLE, ctypes.POINTER(self.SQLHANDLE),)
            self.SQLAllocHandle = self.ODBC_DRIVER.SQLAllocHandle
        else:
            self.SQLAllocHandle = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLAllocStmt"):
            self.ODBC_DRIVER.SQLAllocStmt.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLAllocStmt.argtypes = (self.SQLHDBC, ctypes.POINTER(self.SQLHSTMT),)
            self.SQLAllocStmt = self.ODBC_DRIVER.SQLAllocStmt
        else:
            self.SQLAllocStmt = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLBindCol"):
            self.ODBC_DRIVER.SQLBindCol.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLBindCol.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, self.SQLSMALLINT, self.SQLPOINTER, self.SQLLEN, ctypes.POINTER(self.SQLLEN),)
            self.SQLBindCol = self.ODBC_DRIVER.SQLBindCol
        else:
            self.SQLBindCol = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLBindParam"):
            self.ODBC_DRIVER.SQLBindParam.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLBindParam.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, self.SQLSMALLINT, self.SQLSMALLINT, self.SQLULEN, self.SQLSMALLINT, self.SQLPOINTER, ctypes.POINTER(self.SQLLEN),)
            self.SQLBindParam = self.ODBC_DRIVER.SQLBindParam
        else:
            self.SQLBindParam = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLCancel"):
            self.ODBC_DRIVER.SQLCancel.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLCancel.argtypes = (self.SQLHSTMT,)
            self.SQLCancel = self.ODBC_DRIVER.SQLCancel
        else:
            self.SQLCancel = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLCloseCursor"):
            self.ODBC_DRIVER.SQLCloseCursor.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLCloseCursor.argtypes = (self.SQLHSTMT,)
            self.SQLCloseCursor = self.ODBC_DRIVER.SQLCloseCursor
        else:
            self.SQLCloseCursor = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLColAttribute"):
            self.ODBC_DRIVER.SQLColAttribute.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLColAttribute.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, self.SQLUSMALLINT, self.SQLPOINTER, self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLLEN),)
            self.SQLColAttribute = self.ODBC_DRIVER.SQLColAttribute
            self.SQLColAttribute = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLColumns"):
            self.ODBC_DRIVER.SQLColumns.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLColumns.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT,)
            self.SQLColumns = self.ODBC_DRIVER.SQLColumns
        else:
            self.SQLColumns = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLConnect"):
            self.ODBC_DRIVER.SQLConnect.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLConnect.argtypes = (self.SQLHDBC, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT,)
            self.SQLConnect = self.ODBC_DRIVER.SQLConnect
        else:
            self.SQLConnect = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLCopyDesc"):
            self.ODBC_DRIVER.SQLCopyDesc.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLCopyDesc.argtypes = (self.SQLHDESC, self.SQLHDESC,)
            self.SQLCopyDesc = self.ODBC_DRIVER.SQLCopyDesc
        else:
            self.SQLCopyDesc = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLDataSources"):
            self.ODBC_DRIVER.SQLDataSources.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLDataSources.argtypes = (self.SQLHENV, self.SQLUSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLDataSources = self.ODBC_DRIVER.SQLDataSources
        else:
            self.SQLDataSources = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLDescribeCol"):
            self.ODBC_DRIVER.SQLDescribeCol.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLDescribeCol.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLULEN), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLDescribeCol = self.ODBC_DRIVER.SQLDescribeCol
        else:
            self.SQLDescribeCol = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLDisconnect"):
            self.ODBC_DRIVER.SQLDisconnect.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLDisconnect.argtypes = (self.SQLHDBC,)
            self.SQLDisconnect = self.ODBC_DRIVER.SQLDisconnect
        else:
            self.SQLDisconnect = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLEndTran"):
            self.ODBC_DRIVER.SQLEndTran.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLEndTran.argtypes = (self.SQLSMALLINT, self.SQLHANDLE, self.SQLSMALLINT,)
            self.SQLEndTran = self.ODBC_DRIVER.SQLEndTran
        else:
            self.SQLEndTran = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLError"):
            self.ODBC_DRIVER.SQLError.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLError.argtypes = (self.SQLHENV, self.SQLHDBC, self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), ctypes.POINTER(self.SQLINTEGER), ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLError = self.ODBC_DRIVER.SQLError
        else:
            self.SQLError = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLExecDirect"):
            self.ODBC_DRIVER.SQLExecDirect.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLExecDirect.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLINTEGER,)
            self.SQLExecDirect = self.ODBC_DRIVER.SQLExecDirect
        else:
            self.SQLExecDirect = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLExecute"):
            self.ODBC_DRIVER.SQLExecute.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLExecute.argtypes = (self.SQLHSTMT,)
            self.SQLExecute = self.ODBC_DRIVER.SQLExecute
        else:
            self.SQLExecute = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLFetch"):
            self.ODBC_DRIVER.SQLFetch.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLFetch.argtypes = (self.SQLHSTMT,)
            self.SQLFetch = self.ODBC_DRIVER.SQLFetch
        else:
            self.SQLFetch = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLFetchScroll"):
            self.ODBC_DRIVER.SQLFetchScroll.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLFetchScroll.argtypes = (self.SQLHSTMT, self.SQLSMALLINT, self.SQLLEN,)
            self.SQLFetchScroll = self.ODBC_DRIVER.SQLFetchScroll
        else:
            self.SQLFetchScroll = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLFreeConnect"):
            self.ODBC_DRIVER.SQLFreeConnect.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLFreeConnect.argtypes = (self.SQLHDBC,)
            self.SQLFreeConnect = self.ODBC_DRIVER.SQLFreeConnect
        else:
            self.SQLFreeConnect = self.UnimplementedSQLFunction
